# minima-docs

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
admin/: index.html
admin/account/: index.html
admin/assignment/: index.html
admin/assistant/: index.html
admin/competency/: index.html
admin/content/: index.html
admin/course/: index.html
admin/dashboard/: index.html
admin/discussion/: index.html
admin/exam/: index.html
admin/learning/: index.html
admin/operation/: index.html
admin/partner/: index.html
admin/quiz/: index.html
admin/store/: index.html
admin/survey/: index.html
admin/tracking/: index.html
developer/access-control/: index.html
developer/api/: index.html
developer/setup/: index.html
docs/: index.en.md  index.ko.md  installation.en.md  installation.ko.md
docs/admin/: account.en.md  account.ko.md  assignment.ko.md  assistant.ko.md  competency.en.md  competency.ko.md  content.en.md  content.ko.md  course.en.md  course.ko.md  dashboard.ko.md  discussion.ko.md  exam.en.md  exam.ko.md  index.ko.md  learning.en.md  operation.en.md  partner.en.md  partner.ko.md  quiz.en.md  quiz.ko.md  store.ko.md  survey.en.md  survey.ko.md  tracking.en.md  tracking.ko.md
docs/student/: achievement.en.md  achievement.ko.md  assignment.en.md  assignment.ko.md  assistant.en.md  assistant.ko.md  catalog.en.md  catalog.ko.md  communication.en.md  communication.ko.md  course.en.md  course.ko.md  (+23 more)
installation/: index.html
ko/: index.html
student/: index.html
(+57 files in other folders)
