[project]
name = "minima-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cairosvg>=2.8.2",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "pillow>=12.1.0",
    "pngquant>=3.0.3",
]
